--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ PORT=8080
 NODE_ENV=
 URL_REACT=
 MAX_NUMBER_SCHEDULE=10
+SMTP_HOST=sandbox.smtp.mailtrap.io
+EMAIL=7d6844393e0d39
+PASS=202f3d417ef8f5
