--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.35.2"
+    "nodemailer": "^6.9.16",
+    "sequelize": "^6.35.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
