--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ MAX_NUMBER_SCHEDULE=10
 SMTP_HOST=sandbox.smtp.mailtrap.io
 EMAIL=7d6844393e0d39
 PASS=202f3d417ef8f5
+vnp_TmnCode=CD3C9M4R
+vnp_HashSecret=IARSCI2PH2UMQ0FG4H9DE9CZIXC05H3Z
+vnp_Url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+vnp_ReturnUrl=http://localhost:3000/payment-result
