--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dateformat": "^5.0.3",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.9.16",
+    "qs": "^6.13.1",
     "sequelize": "^6.35.2",
     "uuid": "^8.3.2"
   },
