--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "author": "DinhHao",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -27,6 +29,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "mysql2": "^2.2.5",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^6.9.16",
     "qs": "^6.13.1",
     "sequelize": "^6.35.2",
@@ -34,9 +37,9 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
-    "@babel/core": "^7.23.7",
-    "@babel/node": "^7.22.19",
-    "@babel/preset-env": "^7.23.8",
+    "@babel/core": "^7.26.0",
+    "@babel/node": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
     "nodemon": "^2.0.7",
     "sequelize-cli": "^6.2.0"
   }
