--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.2.5",
     "node-fetch": "^2.7.0",
     "nodemailer": "^6.9.16",
