--- a/package.json
+++ b/package.json
@@ -17,15 +17,23 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@napi-rs/canvas": "^0.1.65",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-converter": "^3.18.0",
+    "@tensorflow/tfjs-core": "^3.18.0",
+    "@tensorflow/tfjs-node": "^3.18.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "canvas": "^3.0.0",
     "cors": "^2.8.5",
     "dateformat": "^5.0.3",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "face-api.js": "^0.22.2",
+    "file-type": "^16.5.4",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
