--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs",
   "version": "1.0.0",
-  "description": "backend nodejs DOANCHUYENNGANH",
+  "description": "backend nodejs doancoso",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,7 +11,7 @@
     "fullstack",
     "nodejs",
     "express",
-    "DOANCHUYENNGANH"
+    "doancoso"
   ],
   "author": "DinhHao",
   "license": "ISC",
@@ -25,6 +25,7 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "blob-polyfill": "^9.0.20240710",
     "body-parser": "^1.19.0",
     "canvas": "^3.0.0",
     "cors": "^2.8.5",
@@ -42,7 +43,8 @@
     "nodemailer": "^6.9.16",
     "qs": "^6.13.1",
     "sequelize": "^6.35.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "web-blob": "^2.1.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
